--- a/admin.ui
+++ b/admin.ui
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>130</y>
+      <x>100</x>
+      <y>180</y>
       <width>55</width>
       <height>16</height>
      </rect>
@@ -30,10 +30,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>70</y>
+      <x>60</x>
+      <y>120</y>
       <width>431</width>
-      <height>261</height>
+      <height>231</height>
      </rect>
     </property>
     <property name="font">
@@ -48,7 +48,7 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>70</y>
+       <y>30</y>
        <width>81</width>
        <height>41</height>
       </rect>
@@ -61,7 +61,7 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>120</y>
+       <y>80</y>
        <width>81</width>
        <height>31</height>
       </rect>
@@ -74,7 +74,7 @@
      <property name="geometry">
       <rect>
        <x>100</x>
-       <y>200</y>
+       <y>160</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -87,7 +87,7 @@
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>90</y>
+       <y>50</y>
        <width>241</width>
        <height>22</height>
       </rect>
@@ -97,43 +97,20 @@
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>130</y>
+       <y>90</y>
        <width>241</width>
        <height>22</height>
       </rect>
      </property>
      <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
+      <enum>QLineEdit::Normal</enum>
      </property>
     </widget>
     <widget class="QComboBox" name="Role">
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>210</y>
-       <width>241</width>
-       <height>22</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_6">
-     <property name="geometry">
-      <rect>
-       <x>90</x>
-       <y>50</y>
-       <width>55</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Name:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="Name">
-     <property name="geometry">
-      <rect>
-       <x>160</x>
-       <y>50</y>
+       <y>170</y>
        <width>241</width>
        <height>22</height>
       </rect>
@@ -143,7 +120,7 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>170</y>
+       <y>130</y>
        <width>121</width>
        <height>21</height>
       </rect>
@@ -156,21 +133,21 @@
      <property name="geometry">
       <rect>
        <x>160</x>
-       <y>170</y>
+       <y>130</y>
        <width>241</width>
        <height>22</height>
       </rect>
      </property>
      <property name="echoMode">
-      <enum>QLineEdit::Password</enum>
+      <enum>QLineEdit::Normal</enum>
      </property>
     </widget>
    </widget>
    <widget class="QPushButton" name="AAddBtn">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>340</y>
+      <x>380</x>
+      <y>360</y>
       <width>111</width>
       <height>31</height>
      </rect>
@@ -187,9 +164,9 @@
    <widget class="QPushButton" name="ABackBtn">
     <property name="geometry">
      <rect>
-      <x>740</x>
-      <y>370</y>
-      <width>111</width>
+      <x>860</x>
+      <y>400</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
@@ -226,15 +203,15 @@
    <widget class="QTableWidget" name="AdminTable">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>80</y>
+      <x>540</x>
+      <y>110</y>
       <width>451</width>
       <height>271</height>
      </rect>
     </property>
     <column>
      <property name="text">
-      <string>Name</string>
+      <string>ID</string>
      </property>
     </column>
     <column>
@@ -253,63 +230,12 @@
      </property>
     </column>
    </widget>
-   <widget class="QGroupBox" name="groupBox_2">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>400</y>
-      <width>431</width>
-      <height>101</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="title">
-     <string>Delete Account</string>
-    </property>
-    <widget class="QLabel" name="label_9">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>40</y>
-       <width>55</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>Username:</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="Name_2">
-     <property name="geometry">
-      <rect>
-       <x>130</x>
-       <y>40</y>
-       <width>241</width>
-       <height>22</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>9</pointsize>
-      </font>
-     </property>
-    </widget>
-   </widget>
    <widget class="QPushButton" name="ADelBtn">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>510</y>
-      <width>111</width>
+      <x>570</x>
+      <y>400</y>
+      <width>121</width>
       <height>31</height>
      </rect>
     </property>
@@ -320,6 +246,24 @@
     </property>
     <property name="text">
      <string>Delete</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="AViewBtn">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>400</y>
+      <width>131</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>View</string>
     </property>
    </widget>
   </widget>
